--- a/src/components/Trending/Trending.css
+++ b/src/components/Trending/Trending.css
@@ -53,11 +53,12 @@
 }
 
 @media (max-width:992px) {
-    .trending{
+    .trending {
         margin-top: 42px;
     }
+
     .trending-card {
-        width: 100%;
+        width: 46%;
         border-radius: 6px;
     }
 
@@ -76,5 +77,11 @@
         span {
             font-size: 12px;
         }
+    }
+}
+
+@media (max-width:768px) {
+    .trending-card {
+        width: 100%;
     }
 }
